--- a/scss/pages/_archive.scss
+++ b/scss/pages/_archive.scss
@@ -5,13 +5,13 @@
   width: 100%;
   margin-top: 120px;
   display: grid;
-  grid-template-columns: minmax(2rem, 1fr) minmax(auto, 980px) minmax(2rem, 1fr);
+  grid-template-columns: var(--container-width);
   align-self: center;
   justify-self: center;
   padding-bottom: clamp(3rem, -7.195rem + 42.93vw, 25rem);
 
   &__header {
-    grid-column: 1 / -1;
+    z-index: 1;
   }
 
   &__container {
