--- a/scss/pages/_header.scss
+++ b/scss/pages/_header.scss
@@ -230,3 +230,21 @@
   }
 }
 /* ------- /.hamburger menu ------- */
+
+// .site-header__nav {
+//   position: relative;
+// }
+// .current-menu-item > a::after {
+//   content: '';
+//   position: absolute;
+//   bottom: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 2px; /* 下線の高さ */
+//   background-color: #ff0000; /* 下線の色 */
+// }
+.menu-item-underline {
+  width: 100%;
+  height: 1px;
+  background-color: var(--color-primary); /* 下線の色 */
+}
