--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -59,7 +59,7 @@
   font-size: clamp(0.937rem, 0.623rem + 1.57vw, 1.8rem);
 }
 .font__title--sm-jp {
-  font-size: clamp(0.5rem, 0.318rem + 0.91vw, 1rem);
+  font-size: clamp(0.875rem, 0.83rem + 0.23vw, 1rem);
   font-weight: 300;
 }
 
@@ -442,10 +442,9 @@ main {
 .news__article-card {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 1rem;
 }
 .news__article-card img {
-  margin-bottom: 1rem;
+  margin-bottom: 0.2rem;
   width: 100%;
   height: auto;
 }
@@ -453,10 +452,7 @@ main {
   text-align: start;
 }
 .news__article-card span {
-  font-family: var(--text-primary);
-  font-size: 0.6rem;
-  letter-spacing: 0.1em;
-  font-weight: 300;
+  line-height: 1;
   text-align: start;
 }
 @media (max-width: 768px) {
@@ -683,8 +679,7 @@ main {
   margin-top: 120px;
 }
 .post__heading {
-  letter-spacing: 0.1em;
-  font-size: clamp(1rem, 0.6364rem + 1.8182vw, 2rem);
+  font-weight: bold;
 }
 .post__content {
   display: grid;
@@ -737,7 +732,7 @@ main {
 .archive-news__article {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
+  gap: 2rem;
 }
 @media (max-width: 768px) {
   .archive-news {
@@ -1098,6 +1093,11 @@ main {
   .plan__option {
     grid-column: 1;
     grid-row: 5;
+  }
+}
+@media (max-width: 768px) {
+  .plan {
+    margin-top: 40px;
   }
 }
 
