--- a/scss/pages/_single.scss
+++ b/scss/pages/_single.scss
@@ -6,8 +6,7 @@
   margin-top: 120px;
 
   &__heading {
-    letter-spacing: 0.1em;
-    font-size: clamp(1rem, 0.6364rem + 1.8182vw, 2rem);
+    font-weight: bold;
   }
 
   &__content {
