contactレイアウト完了 20240503

--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -4,5 +4,6 @@
 @forward './archive';
 @forward './page-about';
 @forward './page-portfolio';
+@forward './page-contact';
 @forward './page-plan';
 @forward './footer';
