--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -917,6 +917,117 @@ main {
   }
 }
 
+.contact {
+  grid-column: 1/-1;
+  width: 100%;
+  margin-top: 120px;
+  display: grid;
+  grid-template-columns: minmax(2rem, 1fr) minmax(auto, 780px) minmax(2rem, 1fr);
+  row-gap: clamp(2rem, 1.273rem + 3.64vw, 4rem);
+}
+.contact__header {
+  z-index: 1;
+}
+.contact__container {
+  grid-column: 2;
+  justify-self: center;
+}
+.contact__title {
+  font-weight: bold;
+}
+.contact__form {
+  grid-column: 2;
+  justify-self: start;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: clamp(2rem, 1.636rem + 1.82vw, 3rem);
+}
+.contact__button {
+  width: 200px;
+  justify-self: center;
+}
+@media (max-width: 768px) {
+  .contact {
+    margin-top: 40px;
+  }
+}
+
+.form_block {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 0.5rem;
+}
+.form_label {
+  font-weight: bold;
+}
+.form_field {
+  height: 2rem;
+}
+.form_textarea {
+  height: 10rem;
+}
+.form_field, .form_textarea {
+  width: 100%;
+}
+
+input[type=radio] {
+  display: none;
+}
+
+.radio {
+  font-size: 16px;
+  margin-right: 12px;
+  padding-left: 20px;
+  position: relative;
+}
+
+.radio::before {
+  background: white;
+  border: 1px solid var(--color-primary);
+  border-radius: 50%;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 16px;
+  height: 16px;
+}
+
+input[type=radio]:checked + .radio::after {
+  background-color: var(--color-primary);
+  border-radius: 50%;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  width: 10px;
+  height: 10px;
+}
+
+/* Safari */
+_::-webkit-full-page-media,
+_:future,
+:root .radio::before {
+  top: -1px;
+}
+
+_::-webkit-full-page-media,
+_:future,
+:root input[type=radio]:checked + .radio::after {
+  top: 3px;
+}
+
+input[type=text i] {
+  padding-block: 4px;
+  padding-inline: 4px;
+}
+
+textarea {
+  padding: 4px;
+}
+
 .service {
   grid-column: 2;
   display: grid;
