--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -246,6 +246,11 @@ main {
   gap: 3rem;
   align-items: center;
 }
+.site-header__gnav {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 3rem;
+}
 .site-header__gnav ul {
   list-style: none;
   inset: 0;
@@ -266,7 +271,7 @@ main {
 .site-header__sns {
   display: grid;
   align-items: center;
-  grid-template-columns: auto; /* アイコンの幅に合わせる */
+  grid-template-columns: auto;
   justify-self: flex-end;
 }
 .site-header__sns img {
@@ -318,54 +323,74 @@ main {
     position: fixed;
     top: 0;
     right: 0;
-    width: 30%;
+    width: 100%;
     height: 100vh;
-    background: var(--color-primary);
+    background-image: url("../../assets/img/footer.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     transform: translateX(100%);
     transition: transform 0.5s ease-in-out;
   }
   .site-nav-checkbox:checked ~ .site-nav {
     transform: translateX(0);
   }
+  .site-header {
+    height: 80px;
+    grid-template-columns: 1rem auto 1.5rem;
+  }
+  .site-header__container {
+    width: 100%;
+  }
   .site-header__nav-container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, auto);
+    grid-template-rows: auto;
     row-gap: 0;
   }
   .site-header__gnav {
     grid-column: 1;
-    grid-row: 1;
     grid-template-columns: 1fr;
-    align-items: center;
     text-align: center;
+    align-self: end;
   }
   .site-header__gnav ul {
     grid-template-columns: 1fr;
-    gap: 3.5rem;
-    justify-self: flex-start;
-  }
-  .site-header__gnav ul li a {
-    color: var(--color-background);
+    gap: clamp(1.5rem, 0.431rem + 5.35vw, 3rem);
+    justify-self: center;
+    width: 50%;
   }
   .site-header__sns {
     grid-column: 1;
     grid-row: 2;
-    grid-template-columns: minmax(1rem, 1fr) minmax(auto, 280px) minmax(1.5rem, 1fr);
-    gap: 3.5rem;
-    justify-self: flex-start;
+    gap: 1rem;
   }
   .site-header__sns img {
-    grid-column: 2;
-    grid-row: 1;
+    justify-self: center;
+    width: 40%;
+    height: auto;
     display: block;
   }
   .site-header__sns a {
-    grid-column: 2;
-    grid-row: 2;
+    justify-self: center;
   }
-  .site-header__sns a svg {
-    stroke: #fff;
+  .site-header #menu-item-20 {
+    display: block;
+    width: 100%;
+    height: 3.5rem;
+    font-family: var(--font-title-en);
+    font-size: 1.25rem;
+    font-weight: 300;
+    letter-spacing: 0.1em;
+    border: none;
+    border-radius: 10px;
+    border: 1px solid var(--color-primary);
+    background-color: rgba(168, 129, 91, 0.7);
+    cursor: pointer;
+    line-height: 3.5rem;
+  }
+  .site-header #menu-item-20 > a {
+    color: #fff;
   }
   .site-nav-checkbox:checked ~ .site-nav-toggle span {
     transform: scaleX(0);
@@ -373,35 +398,20 @@ main {
   .site-nav-checkbox:checked ~ .site-nav-toggle::before {
     top: 50%;
     transform: rotate(30deg);
-    background-color: var(--color-background);
   }
   .site-nav-checkbox:checked ~ .site-nav-toggle::after {
     top: 50%;
     transform: rotate(-30deg);
-    background-color: var(--color-background);
   }
   .cls-1 {
     stroke: var(--color-background);
-  }
-}
-@media (max-width: 768px) {
-  .site-header {
-    height: 80px;
-    grid-template-columns: 1rem auto 1.5rem;
-  }
-  .site-header__container {
-    max-width: 95%;
-  }
-  .site-nav {
-    width: 100%;
-    height: 100vh;
   }
 }
 /* ------- /.hamburger menu ------- */
 .menu-item-underline {
   width: 100%;
   height: 1px;
-  background-color: var(--color-primary); /* 下線の色 */
+  background-color: var(--color-primary);
 }
 
 .main-visual {
